package fr.univnantes.alma.gamemanager.game.api.enums;

public enum GameStatus {
    SetUp,
    ResourceProduction,
    Robber,
    TradeAndBuild,
    GameStop;
}
