package fr.univnantes.alma.modele.api.enums;

public enum Color {
    Bleu,
    Blanc,
    Orange,
    Rouge;
}
