package fr.univnantes.alma.modele.api.enums;

public enum Development {
    PointsDeVictoire,
    Chevalier,
    Monopole,
    Invention,
    ConstructionDeRoutes;
}
