package fr.univnantes.alma.modele.api.enums;

public enum ExchangeRate {
    quatre,
    trois,
    deux;
}
