package fr.univnantes.alma.modele.api.enums;

public enum Resource {
    Bois,
    Argile,
    Laine,
    Blé,
    Minerai;

}
