package fr.univnantes.alma.modele.api.enums;

public enum SpecialCard {
    RoutePlusLongue,
    ArmeePlusPuissante;
}
